--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 MONGO_URL = "mongodb+srv://sam:sam@cluster0.1mhw6op.mongodb.net/test?retryWrites=true&w=majority"
 MONGO_URL_ATLAS = "mongodb://localhost:27017"
+
+GOOGLE_CLIENT_ID=1042342041949-gap4dqf52t74u9b0oj454pfpdejm39sn.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+
+NEXTAUTH_SECRET="sammedisafullsatckdeveloper"
+NEXTAUTH_URL="http://localhost:3000"
