--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongoose": "6.11.1",
-    "next-auth": "^4.22.3"
+    "next-auth": "^4.22.3",
+    "swr": "^2.2.0"
   }
 }
