--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXTAUTH_SECRET="sammedisafullsatckdeveloper"
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
