--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
     "mongoose": "6.11.1",
-    "next-auth": "^4.22.3",
-    "swr": "^2.2.0"
+    "next": "13.4.3",
+    "next-auth": "^4.22.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "^2.1.5"
   }
 }
