--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "mongoose": "6.11.1",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "swr": "^2.1.5"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.9"
   }
 }
