--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "framer-motion": "^10.15.0",
     "mongoose": "6.11.1",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
