--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typescript-next",
   "version": "0.1.0",
+  "license": "",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -21,13 +22,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.32.4",
     "swr": "^2.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.9",
+    "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
