--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.4",
     "swr": "^2.2.0"
   },
@@ -29,6 +31,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.20",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
