--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.15.0",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.4",
     "swr": "^2.2.0"
