--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.15.0",
     "mongoose": "6.11.1",
-    "next": "13.4.3",
+    "next": "^14.0.4",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
     "react": "18.2.0",
