--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.15.0",
+    "i": "^0.3.7",
     "mongoose": "6.11.1",
     "next": "^14.0.4",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
+    "npm": "^10.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -27,7 +32,8 @@
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.4",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
