--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@tsparticles/slim": "^3.5.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
-    "framer-motion": "^10.15.0",
+    "framer-motion": "^11.3.27",
     "i": "^0.3.7",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "6.11.1",
     "next": "^14.0.4",
     "next-auth": "^4.22.1",
